--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">المزرعة الزكية </a>
+        <a href="#" class="logo">المزرعة الذكية </a>
         <nav class="navigation">
             <a href="#services">services</a>
             <a href="#contacts">contacts</a>
@@ -21,12 +21,10 @@
 
     <section class="main">
         <div>
-             <center align ="right">
-            <h2 >  : مزرعة رقم 2  </h2>
-            <h3> مساحتها: 120 فدان </h3>
-            <h4> مزروعه بمحصول الفراولة </h4>
-            <h5> يتم رى المحاصيل بها بنظام الرى بالتنقيط </h5>
-              </center> 
+            <h2><p align="center"class="title">  : مزرعة رقم 2  </p></h2>
+            <h3><p align="center"class="p"> مساحتها: 120 فدان </p></h3>
+            <h3><p align="center"class="p"> مزروعه بمحصول الفراولة </p></h3>
+            <h3><p align="center"class="p"> يتم رى المحاصيل بها بنظام الرى بالتنقيط </p></h3>
             
         </div>
 
